// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormCreditCardField /> correctly accepts a \`defaultValue\` prop 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 222266 66999"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input backspacing character after whitespace deletes the whitespace 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 2"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input backspacing character after whitespace deletes the whitespace 2`] = `
Object {
  "selectionEnd": 6,
  "selectionStart": 6,
  "value": "3777 2",
}
`;

exports[`<FormCreditCardField /> key input backspacing character after whitespace deletes the whitespace 3`] = `
Object {
  "selectionEnd": 4,
  "selectionStart": 4,
  "value": "3777",
}
`;

exports[`<FormCreditCardField /> key input backspacing character after whitespace deletes the whitespace 4`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777"
      maxlength="17"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input backspacing character before whitespace preserves whitespace location 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 2"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input backspacing character before whitespace preserves whitespace location 2`] = `
Object {
  "selectionEnd": 4,
  "selectionStart": 4,
  "value": "3777 2",
}
`;

exports[`<FormCreditCardField /> key input backspacing character before whitespace preserves whitespace location 3`] = `
Object {
  "selectionEnd": 3,
  "selectionStart": 3,
  "value": "3772",
}
`;

exports[`<FormCreditCardField /> key input backspacing character before whitespace preserves whitespace location 4`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3772"
      maxlength="17"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input backspacing whitespace deletes the character before 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 2"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input backspacing whitespace deletes the character before 2`] = `
Object {
  "selectionEnd": 5,
  "selectionStart": 5,
  "value": "3777 2",
}
`;

exports[`<FormCreditCardField /> key input backspacing whitespace deletes the character before 3`] = `
Object {
  "selectionEnd": 3,
  "selectionStart": 3,
  "value": "3772",
}
`;

exports[`<FormCreditCardField /> key input backspacing whitespace deletes the character before 4`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3772"
      maxlength="17"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input deleting character after whitespace preserves whitespace location 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 2"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input deleting character after whitespace preserves whitespace location 2`] = `
Object {
  "selectionEnd": 5,
  "selectionStart": 5,
  "value": "3777 2",
}
`;

exports[`<FormCreditCardField /> key input deleting character after whitespace preserves whitespace location 3`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "3777",
}
`;

exports[`<FormCreditCardField /> key input deleting character after whitespace preserves whitespace location 4`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777"
      maxlength="17"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input deleting character before whitespace deletes the whitespace 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 2"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input deleting character before whitespace deletes the whitespace 2`] = `
Object {
  "selectionEnd": 3,
  "selectionStart": 3,
  "value": "3777 2",
}
`;

exports[`<FormCreditCardField /> key input deleting character before whitespace deletes the whitespace 3`] = `
Object {
  "selectionEnd": 2,
  "selectionStart": 2,
  "value": "3772",
}
`;

exports[`<FormCreditCardField /> key input deleting character before whitespace deletes the whitespace 4`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3772"
      maxlength="17"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input deleting whitespace deletes the character after 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 23"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input deleting whitespace deletes the character after 2`] = `
Object {
  "selectionEnd": 4,
  "selectionStart": 4,
  "value": "3777 23",
}
`;

exports[`<FormCreditCardField /> key input deleting whitespace deletes the character after 3`] = `
Object {
  "selectionEnd": 5,
  "selectionStart": 5,
  "value": "3777 3",
}
`;

exports[`<FormCreditCardField /> key input deleting whitespace deletes the character after 4`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 3"
      maxlength="17"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input handles empty values 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="1"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input handles empty values 2`] = `
Object {
  "selectionEnd": 1,
  "selectionStart": 1,
  "value": "1",
}
`;

exports[`<FormCreditCardField /> key input handles empty values 3`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "",
}
`;

exports[`<FormCreditCardField /> key input handles empty values 4`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value=""
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input handles typing as expected 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value=""
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input handles typing as expected 2`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 3`] = `
Object {
  "selectionEnd": 1,
  "selectionStart": 1,
  "value": "3",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 4`] = `
Object {
  "selectionEnd": 2,
  "selectionStart": 2,
  "value": "37",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 5`] = `
Object {
  "selectionEnd": 3,
  "selectionStart": 3,
  "value": "377",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 6`] = `
Object {
  "selectionEnd": 4,
  "selectionStart": 4,
  "value": "3777",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 7`] = `
Object {
  "selectionEnd": 4,
  "selectionStart": 4,
  "value": "3777",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 8`] = `
Object {
  "selectionEnd": 6,
  "selectionStart": 6,
  "value": "3777 2",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 9`] = `
Object {
  "selectionEnd": 7,
  "selectionStart": 7,
  "value": "3777 22",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 10`] = `
Object {
  "selectionEnd": 8,
  "selectionStart": 8,
  "value": "3777 222",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 11`] = `
Object {
  "selectionEnd": 9,
  "selectionStart": 9,
  "value": "3777 2222",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 12`] = `
Object {
  "selectionEnd": 9,
  "selectionStart": 9,
  "value": "3777 2222",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 13`] = `
Object {
  "selectionEnd": 10,
  "selectionStart": 10,
  "value": "3777 22226",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 14`] = `
Object {
  "selectionEnd": 11,
  "selectionStart": 11,
  "value": "3777 222266",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 15`] = `
Object {
  "selectionEnd": 13,
  "selectionStart": 13,
  "value": "3777 222266 6",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 16`] = `
Object {
  "selectionEnd": 14,
  "selectionStart": 14,
  "value": "3777 222266 66",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 17`] = `
Object {
  "selectionEnd": 14,
  "selectionStart": 14,
  "value": "3777 222266 66",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 18`] = `
Object {
  "selectionEnd": 15,
  "selectionStart": 15,
  "value": "3777 222266 669",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 19`] = `
Object {
  "selectionEnd": 16,
  "selectionStart": 16,
  "value": "3777 222266 6699",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 20`] = `
Object {
  "selectionEnd": 17,
  "selectionStart": 17,
  "value": "3777 222266 66999",
}
`;

exports[`<FormCreditCardField /> key input handles typing as expected 21`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 222266 66999"
      maxlength="17"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value=""
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 2`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 3`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "9",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 4`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "99",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 5`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 6`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 7`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "6999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 8`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "66999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 9`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "666999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 10`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "6666999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 11`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "6666999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 12`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "2666 6999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 13`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "226666999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 14`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "2226 6669 99",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 15`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "2222 6666 999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 16`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "2222 6666 999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 17`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "722226666999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 18`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "7722226666999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 19`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "77722226666999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 20`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "3777 222266 66999",
}
`;

exports[`<FormCreditCardField /> key input handles typing at the start of a value as expected 21`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 222266 66999"
      maxlength="17"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value=""
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 2`] = `
Object {
  "selectionEnd": 0,
  "selectionStart": 0,
  "value": "",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 3`] = `
Object {
  "selectionEnd": 1,
  "selectionStart": 1,
  "value": "2",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 4`] = `
Object {
  "selectionEnd": 2,
  "selectionStart": 2,
  "value": "22",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 5`] = `
Object {
  "selectionEnd": 3,
  "selectionStart": 3,
  "value": "222",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 6`] = `
Object {
  "selectionEnd": 4,
  "selectionStart": 4,
  "value": "2227",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 7`] = `
Object {
  "selectionEnd": 5,
  "selectionStart": 5,
  "value": "22277",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 8`] = `
Object {
  "selectionEnd": 6,
  "selectionStart": 6,
  "value": "222777",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 9`] = `
Object {
  "selectionEnd": 7,
  "selectionStart": 7,
  "value": "2227772",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 10`] = `
Object {
  "selectionEnd": 8,
  "selectionStart": 8,
  "value": "22277727",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 11`] = `
Object {
  "selectionEnd": 9,
  "selectionStart": 9,
  "value": "222777272",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 12`] = `
Object {
  "selectionEnd": 10,
  "selectionStart": 10,
  "value": "2227772727",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 13`] = `
Object {
  "selectionEnd": 11,
  "selectionStart": 11,
  "value": "22277727272",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 14`] = `
Object {
  "selectionEnd": 12,
  "selectionStart": 12,
  "value": "222777272727",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 15`] = `
Object {
  "selectionEnd": 13,
  "selectionStart": 13,
  "value": "2227772727272",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 16`] = `
Object {
  "selectionEnd": 14,
  "selectionStart": 14,
  "value": "22277727272727",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 17`] = `
Object {
  "selectionEnd": 15,
  "selectionStart": 15,
  "value": "222777272727272",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 18`] = `
Object {
  "selectionEnd": 16,
  "selectionStart": 16,
  "value": "2227772727272727",
}
`;

exports[`<FormCreditCardField /> key input unformats unknown cards 19`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="2227772727272727"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> pasting doesn't call preventDefault if the paste event doesn't provide data 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 222266 66999"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> pasting doesn't call preventDefault if the paste event doesn't provide data 2`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 222266 66999"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> pasting handles inputs which are longer than current values 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="2227 7727 2727 2727"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> pasting handles inputs which are longer than current values 2`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="4434 4344 3444 4434434"
      maxlength="22"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> pasting handles values being pased into the middle of an existing value 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 222266 66999"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> pasting handles values being pased into the middle of an existing value 2`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 443443 44344"
      maxlength="17"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> pasting handles values being pased over an existing value 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="3777 222266 66999"
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> pasting handles values being pased over an existing value 2`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value="4434 4344 3444 4434434"
      maxlength="22"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;

exports[`<FormCreditCardField /> renders as expected with no arguments 1`] = `
<div
  data-reactroot=""
  class="mb2"
>
  <label>
    <div
      class="bold mb1"
    >
      <!-- react-text: 4 -->
      Card Number
      <!-- /react-text -->
    </div>
    <input
      type="tel"
      class="input"
      autocomplete="cc-number"
      value=""
      maxlength="19"
      spellcheck="false"
    />
  </label>
  <!-- react-empty: 6 -->
  <!-- react-empty: 7 -->
</div>
`;
